# sourmash_plugin_extract_errors

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
src/: extract_errors.cpp
src/extract_errors/: __init__.py
