[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"


[project]
name = "extract_errors"
version = "0.2"
description = "Find kmers that appeared once in a pool of signatures"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Mohamed Abuelanin", email = "mabuelanin@gmail.com" }]
classifiers = ["License :: BSD"]

dependencies = [
    "sourmash>=4.8.0,<5",
]

[project.urls]
Homepage = "https://github.com/mr-eyes/sourmash_plugin_extract_errors"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[project.scripts]
extract_errors = "extract_errors:cli"

[project.entry-points."sourmash.cli_script"]
extract_errors = "extract_errors:Command_ExtractErrors"